--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/huixiangming/register#readme",
   "devDependencies": {
     "grunt": "^1.1.0",
-    "grunt-contrib-less": "^2.0.0"
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.1"
   }
 }
